[tool.poetry]
name = "infosec_learn"
version = "0.1.0"
description = ""
authors = ["David Tillemans <david.tillemans@cryptable.org>"]
license = "GNU General Public License v3 (GPL-3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
cryptography = "^42.0.3"
pycryptodome = "^3.20.0"
django-bootstrap5 = "^23.4"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
pytest-cov = "^3.0.0"
pytest-django = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
